[package]
name = "distributed_hash_table_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
crossbeam-channel = "0.5.1"
